--- a/package.json
+++ b/package.json
@@ -21,54 +21,65 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^1.6.0",
-    "@nestjs/config": "^1.1.5",
-    "@nestjs/serve-static": "^2.2.2",
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
-    "@nestjs/swagger": "^4.7.6",
-    "@nestjs/typeorm": "^7.1.5",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
     "express-handlebars": "^6.0.2",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.7.2",
-    "oracledb": "^5.3.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
-    "swagger-ui-express": "^4.1.5",
-    "typeorm": "^0.2.41"
+    "rxjs": "^7.2.0",
+    "tls": "^0.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
+    "@nestjs-modules/mailer": "^1.3.17",
+    "@nestjs/common": "^8.4.1",
+    "@nestjs/config": "^1.1.5",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^8.2.1",
+    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
+    "@nestjs/swagger": "^5.2.0",
+    "@nestjs/typeorm": "^8.0.3",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.6",
+    "@types/node": "^16.0.6",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "eslint": "^7.12.1",
-    "@types/nodemailer": "^6.4.4",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "exphbs": "^1.2.0",
+    "express-handlebars": "^6.0.2",
+    "handlebars": "^4.7.7",
     "jest": "^26.6.3",
+    "nodemailer": "^6.7.2",
+    "oracledb": "^5.3.0",
     "prettier": "^2.1.2",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.2.0",
     "supertest": "^6.0.0",
+    "swagger-ui-express": "^4.3.0",
     "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.8",
-    "ts-node": "^9.0.0",
+    "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
+    "typeorm": "^0.2.45",
     "typescript": "^4.0.5"
   },
   "jest": {
