--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
     "express-handlebars": "^6.0.2",
+    "ficha-proyecto": "file:",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.7.2",
     "passport": "^0.4.1",
